[tool.poetry]
name = "comp100-2021f-ps0-hamzakhan78600-10"
version = "0.1.0"
description = ""
authors = ["Hamza78600 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy1 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
